--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Заголовок</h1>
-    <img src="/img/img1.png" alt="">
-    <img src="../../img/img2.jpg" alt="">
+    <img src="/img/img1.png" alt="рисунок 1">
+    <img src="../../img/img2.jpg" alt="рисунок 2">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nihil optio ipsa non accusamus dolore perferendis laboriosam! Repellat sed quis, tempora dignissimos voluptates laborum iste voluptas nam rerum ea eius?</p>
 </body>
 </html>
