Fixing First Letter

--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
             <div class="main__crew">
                 <div class="main__person">
                     <div class="main__frame">
-                        <img src="/img/alex.jpg" alt="фото Белов Алексей Вадимович" class="main__foto">
+                        <img src="/img/Alex.jpg" alt="фото Белов Алексей Вадимович" class="main__foto">
                     </div>
                     <div class="main__profile">
                         <p class="main__name">Белов Алексей Вадимович</p>
@@ -65,7 +65,7 @@
                 
                 <div class="main__person">
                     <div class="main__frame">
-                        <img src="/img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="main__foto">
+                        <img src="/img/Inna.jpg" alt="фото Сухарина Инна Николаевна" class="main__foto">
                     </div>
                     <div class="main_profile">
                         <p class="main__name">Сухарина Инна Николаевна</p>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="main__person">
                     <div class="main__frame">
-                        <img src="/img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="main__foto">
+                        <img src="/img/Boris.jpg" alt="фото Лещ Борис Анатольевич" class="main__foto">
                     </div>
                     <div class="main_profile">
                         <p class="main__name">Лещ Борис Анатольевич</p>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="main__person">
                     <div class="main__frame">
-                        <img src="/img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="main__foto">
+                        <img src="/img/Elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="main__foto">
                     </div>
                     <div class="main_profile">
                         <p class="main__name">Дигангидзе Элина Даниловна</p>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="main__person">
                     <div class="main__frame">
-                        <img src="/img/elena.jpg" alt="фото Следь Елена Николаевна" class="main__foto">
+                        <img src="/img/Elena.jpg" alt="фото Следь Елена Николаевна" class="main__foto">
                     </div>
                     <div class="main__profile">
                         <p class="main__name">Следь Елена Николаевна</p>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="main__person">
                     <div class="main__frame">
-                        <img src="/img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="main__foto">
+                        <img src="/img/Yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="main__foto">
                     </div>
                     <div class="main__profile">
                         <p class="main__name">Нестеренко Юрий Афанасьевич</p>
