--- a/team.html
+++ b/team.html
@@ -18,8 +18,8 @@
                     <div class="header__schedule">График работы</div>
                 <!-- <div class="header__hours">
                     <div class="header__work">пн-вс: 09:00-20:00</div>
-                    <div class="header__lunch">обед: 14:00-14:30</div> -->
-                </div>
+                    <div class="header__lunch">обед: 14:00-14:30</div>
+                </div> -->
             </div>
         </div>
         <div class="container">
@@ -51,7 +51,7 @@
                 <ul class="main__crew">
                     <li class="main__person">
                         <div class="main__frame">
-                            <img src="img/Alex.jpg" alt="фото Белов Алексей Вадимович" class="main__foto">
+                            <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="main__foto">
                         </div>
                         <div class="main__profile">
                             <p class="main__name">Белов Алексей Вадимович</p>
@@ -68,7 +68,7 @@
                     
                     <li class="main__person">
                         <div class="main__frame">
-                            <img src="img/Inna.jpg" alt="фото Сухарина Инна Николаевна" class="main__foto">
+                            <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="main__foto">
                         </div>
                         <div class="main__profile">
                             <p class="main__name">Сухарина Инна Николаевна</p>
@@ -86,7 +86,7 @@
                     </li>
                     <li class="main__person">
                         <div class="main__frame">
-                            <img src="img/Boris.jpg" alt="фото Лещ Борис Анатольевич" class="main__foto">
+                            <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="main__foto">
                         </div>
                         <div class="main__profile">
                             <p class="main__name">Лещ Борис Анатольевич</p>
@@ -103,7 +103,7 @@
                     </li>
                     <li class="main__person">
                         <div class="main__frame">
-                            <img src="img/Elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="main__foto">
+                            <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="main__foto">
                         </div>
                         <div class="main__profile">
                             <p class="main__name">Дигангидзе Элина Даниловна</p>
@@ -121,7 +121,7 @@
                     </li>
                     <li class="main__person">
                         <div class="main__frame">
-                            <img src="img/Elena.jpg" alt="фото Следь Елена Николаевна" class="main__foto">
+                            <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="main__foto">
                         </div>
                         <div class="main__profile">
                             <p class="main__name">Следь Елена Николаевна</p>
@@ -140,7 +140,7 @@
                     </li>
                     <li class="main__person">
                         <div class="main__frame">
-                            <img src="img/Yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="main__foto">
+                            <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="main__foto">
                         </div>
                         <div class="main__profile">
                             <p class="main__name">Нестеренко Юрий Афанасьевич</p>
