--- a/team.html
+++ b/team.html
@@ -12,14 +12,17 @@
     <div class="wrapper">
         <div class="container">
             <div class="header">
-                <img src="img/logo_header.png" alt="logo" class=header__logo>
-                <div class=header__info>
-                    <div class="header__phone">8 (800) 00-392-10</div>
-                    <div class="header__schedule">График работы</div>
-                <!-- <div class="header__hours">
+                <div class="header__banner">
+                    <img src="img/logo_header.png" alt="logo" class=header__logo>
+                    <div class=header__info>
+                        <div class="header__phone">8 (800) 00-392-10</div>
+                        <div class="header__schedule">График работы</div>
+                    </div>
+                </div>
+                <div class="header__hours">
                     <div class="header__work">пн-вс: 09:00-20:00</div>
                     <div class="header__lunch">обед: 14:00-14:30</div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="container">
