--- a/team.html
+++ b/team.html
@@ -16,13 +16,19 @@
                     <img src="img/logo_header.png" alt="logo" class=header__logo>
                     <div class=header__info>
                         <div class="header__phone">8 (800) 00-392-10</div>
-                        <div class="header__schedule">График работы</div>
+                        <div class="header__hours">
+                            <div class="header__schedule">График работы</div>
+                            <div class="header__popup">
+                                <div class="header__work">пн-вс: 09:00-20:00</div>
+                                <div class="header__lunch">обед: 14:00-14:30</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="header__hours">
+                <!-- <div class="header__hours">
                     <div class="header__work">пн-вс: 09:00-20:00</div>
                     <div class="header__lunch">обед: 14:00-14:30</div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container">
