--- a/team.html
+++ b/team.html
@@ -57,15 +57,13 @@
                     <li class="breadcrumbs__item">/Экипаж</li>
                 </ul>
                 <div class="main__title">Экипаж</div>
-                <ul class="main__crew">
-                    <li class="main__person">
-                        <div class="main__frame">
-                            <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="main__foto">
-                        </div>
-                        <div class="main__profile">
-                            <p class="main__name">Белов Алексей Вадимович</p>
-                            <p class="main__job">Главный пилот</p>
-                            <p class="main__bio">
+                <ul class="crew">
+                    <li class="profile">
+                        <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__foto">
+                        <div class="person">
+                            <p class="person__name">Белов Алексей Вадимович</p>
+                            <p class="person__position">Главный пилот</p>
+                            <p class="person__bio">
                                 Высокий профессионализм, честь
                                 и отвага - все это характеристики
                                 главного пилота Белова А.В. На его
@@ -75,14 +73,12 @@
                         </div>
                     </li>
                     
-                    <li class="main__person">
-                        <div class="main__frame">
-                            <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="main__foto">
-                        </div>
-                        <div class="main__profile">
-                            <p class="main__name">Сухарина Инна Николаевна</p>
-                            <p class="main__job">Бортпроводник</p>
-                            <p class="main__bio">
+                    <li class="profile">
+                        <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__foto">
+                        <div class="person">
+                            <p class="person__name">Сухарина Инна Николаевна</p>
+                            <p class="person__position">Бортпроводник</p>
+                            <p class="person__bio">
                                 Благодаря деятельности этого
                                 человека, на борту самолета клиенты
                                 чувствуют себя, как дома. Инна
@@ -93,14 +89,12 @@
                             </p>
                         </div>
                     </li>
-                    <li class="main__person">
-                        <div class="main__frame">
-                            <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="main__foto">
-                        </div>
-                        <div class="main__profile">
-                            <p class="main__name">Лещ Борис Анатольевич</p>
-                            <p class="main__job">Авиатехник</p>
-                            <p class="main__bio">
+                    <li class="profile">
+                        <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__foto">
+                        <div class="person">
+                            <p class="person__name">Лещ Борис Анатольевич</p>
+                            <p class="person__position">Авиатехник</p>
+                            <p class="person__bio">
                                 Человек с золотыми руками, инженер
                                 и конструктор от Бога! Борис
                                 Анатольевич работает уже более 50
@@ -110,14 +104,12 @@
                             </p>
                         </div>
                     </li>
-                    <li class="main__person">
-                        <div class="main__frame">
-                            <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="main__foto">
-                        </div>
-                        <div class="main__profile">
-                            <p class="main__name">Дигангидзе Элина Даниловна</p>
-                            <p class="main__job">Диспетчер</p>
-                            <p class="main__bio">
+                    <li class="profile">
+                        <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__foto">
+                        <div class="person">
+                            <p class="person__name">Дигангидзе Элина Даниловна</p>
+                            <p class="person__position">Диспетчер</p>
+                            <p class="person__bio">
                                 Ей присущ внимательный подход к
                                 расчетам, а отменная память удивляет
                                 даже самых опытных членов экипажа.
@@ -128,14 +120,12 @@
                             </p>
                         </div>
                     </li>
-                    <li class="main__person">
-                        <div class="main__frame">
-                            <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="main__foto">
-                        </div>
-                        <div class="main__profile">
-                            <p class="main__name">Следь Елена Николаевна</p>
-                            <p class="main__job">Старший бортпроводник</p>
-                            <p class="main__bio">
+                    <li class="profile">
+                        <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__foto">
+                        <div class="person">
+                            <p class="person__name">Следь Елена Николаевна</p>
+                            <p class="person__position">Старший бортпроводник</p>
+                            <p class="person__bio">
                                 Вежливая улыбка, внимательность к
                                 деталям и большой опыт работы — это
                                 лишь малая часть достоинств Елены
@@ -147,14 +137,12 @@
                             </p>
                         </div>
                     </li>
-                    <li class="main__person">
-                        <div class="main__frame">
-                            <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="main__foto">
-                        </div>
-                        <div class="main__profile">
-                            <p class="main__name">Нестеренко Юрий Афанасьевич</p>
-                            <p class="main__job">Второй пилот</p>
-                            <p class="main__bio">
+                    <li class="profile">
+                        <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__foto">
+                        <div class="person">
+                            <p class="person__name">Нестеренко Юрий Афанасьевич</p>
+                            <p class="person__position">Второй пилот</p>
+                            <p class="person__bio">
                                 Правая рука главного пилота, опытный
                                 и отважный помощник. О своей работе
                                 в шутку говорит так: "Наше дело
