rename some classes

--- a/team.html
+++ b/team.html
@@ -12,23 +12,17 @@
     <div class="wrapper">
         <div class="container">
             <div class="header">
-                <div class="header__banner">
-                    <img src="img/logo_header.png" alt="logo" class=header__logo>
-                    <div class=header__info>
-                        <div class="header__phone">8 (800) 00-392-10</div>
-                        <div class="header__hours">
-                            <div class="header__schedule">График работы</div>
-                            <div class="header__popup">
-                                <div class="header__work">пн-вс: 09:00-20:00</div>
-                                <div class="header__lunch">обед: 14:00-14:30</div>
-                            </div>
+                <img src="img/logo_header.png" alt="logo" class=header__logo>
+                <div class=info>
+                    <div class="phone">8 (800) 00-392-10</div>
+                    <div class="popup">
+                        <div class="schedule">График работы</div>
+                        <div class="popup__block">
+                            <div class="workHours">пн-вс: 09:00-20:00</div>
+                            <div class="lunch">обед: 14:00-14:30</div>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="header__hours">
-                    <div class="header__work">пн-вс: 09:00-20:00</div>
-                    <div class="header__lunch">обед: 14:00-14:30</div>
-                </div> -->
             </div>
         </div>
         <div class="container">
@@ -59,7 +53,7 @@
                 <div class="main__title">Экипаж</div>
                 <ul class="crew">
                     <li class="profile">
-                        <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__foto">
+                        <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
                         <div class="person">
                             <p class="person__name">Белов Алексей Вадимович</p>
                             <p class="person__position">Главный пилот</p>
@@ -74,7 +68,7 @@
                     </li>
                     
                     <li class="profile">
-                        <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__foto">
+                        <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
                         <div class="person">
                             <p class="person__name">Сухарина Инна Николаевна</p>
                             <p class="person__position">Бортпроводник</p>
@@ -90,7 +84,7 @@
                         </div>
                     </li>
                     <li class="profile">
-                        <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__foto">
+                        <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
                         <div class="person">
                             <p class="person__name">Лещ Борис Анатольевич</p>
                             <p class="person__position">Авиатехник</p>
@@ -105,7 +99,7 @@
                         </div>
                     </li>
                     <li class="profile">
-                        <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__foto">
+                        <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
                         <div class="person">
                             <p class="person__name">Дигангидзе Элина Даниловна</p>
                             <p class="person__position">Диспетчер</p>
@@ -121,7 +115,7 @@
                         </div>
                     </li>
                     <li class="profile">
-                        <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__foto">
+                        <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
                         <div class="person">
                             <p class="person__name">Следь Елена Николаевна</p>
                             <p class="person__position">Старший бортпроводник</p>
@@ -138,7 +132,7 @@
                         </div>
                     </li>
                     <li class="profile">
-                        <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__foto">
+                        <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
                         <div class="person">
                             <p class="person__name">Нестеренко Юрий Афанасьевич</p>
                             <p class="person__position">Второй пилот</p>
