--- a/team.html
+++ b/team.html
@@ -9,188 +9,191 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="container">
-            <div class="header">
-                <img src="img/logo_header.png" alt="logo" class=header__logo>
-                <div class=info>
-                    <div class="phone">8 (800) 00-392-10</div>
-                    <div class="popup">
-                        <div class="schedule">График работы</div>
-                        <div class="popup__block">
-                            <div class="workHours">пн-вс: 09:00-20:00</div>
-                            <div class="lunch">обед: 14:00-14:30</div>
-                        </div>
+    <div class="header">
+        <div class="container__header">
+            <a href="http://ya.ru" class="homeLink_header">
+                <img src="img/logo_header.png" alt="logo" class=logo>
+            </a>
+            <div class=info>
+                <a href="tel:88000039210" class="phone">
+                    <div class="number">(800) 00-392-10</div> 
+                </a>
+                <div class="popup">
+                    <div class="schedule">График работы</div>
+                    <div class="popup__block">
+                        <div class="workHours">пн-вс: 09:00-20:00</div>
+                        <div class="lunch">обед: 14:00-14:30</div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <ul class="navigation">
         <div class="container">
-            <ul class="navigation">
-                <li class="navigation__mainLink">
-                    <a href="http://ya.ru" class="navigation__link">
-                        <p class="navigation__name">Главная</p>
-                    </a>
+            <li class="navigation__mainLink">
+                <a href="http://ya.ru" class="navigation__link">
+                    <p class="navigation__name">Главная</p>
+                </a>
+            </li>
+            <li class="navigation__teamLink">
+                <a href="team.html" class="navigation__link">
+                    <p class="navigation__name">Экипаж</p>
+                </a>
+            </li>
+            <li class="navigation__feedLink">
+                <a href="http://ya.ru" class="navigation__link">
+                    <p class="navigation__name">Отзывы</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="main">
+        <div class="container">
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
+                <li class="breadcrumbs__item">/Экипаж</li>
+            </ul>
+            <div class="main__title">Экипаж</div>
+            <ul class="crew">
+                <li class="profile">
+                    <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
+                    <div class="person">
+                        <p class="person__name">Белов Алексей Вадимович</p>
+                        <p class="person__position">Главный пилот</p>
+                        <p class="person__bio">
+                            Высокий профессионализм, честь
+                            и отвага - все это характеристики
+                            главного пилота Белова А.В. На его
+                            счету более 700 полетов. Награжден за
+                            мужество и отвагу указом президента.
+                        </p>
+                    </div>
                 </li>
-                <li class="navigation__teamLink">
-                    <a href="team.html" class="navigation__link">
-                        <p class="navigation__name">Экипаж</p>
-                    </a>
+                <li class="profile">
+                    <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
+                    <div class="person">
+                        <p class="person__name">Сухарина Инна Николаевна</p>
+                        <p class="person__position">Бортпроводник</p>
+                        <p class="person__bio">
+                            Благодаря деятельности этого
+                            человека, на борту самолета клиенты
+                            чувствуют себя, как дома. Инна
+                            Николаевна чутко относится ко всем
+                            требованиям клиентов, очень любит
+                            детей и всячески помогает сделать
+                            полет комфортным и приятным.
+                        </p>
+                    </div>
                 </li>
-                <li class="navigation__feedLink">
-                    <a href="http://ya.ru" class="navigation__link">
-                        <p class="navigation__name">Отзывы</p>
-                    </a>
+                <li class="profile">
+                    <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
+                    <div class="person">
+                        <p class="person__name">Лещ Борис Анатольевич</p>
+                        <p class="person__position">Авиатехник</p>
+                        <p class="person__bio">
+                            Человек с золотыми руками, инженер
+                            и конструктор от Бога! Борис
+                            Анатольевич работает уже более 50
+                            лет и на своем веку видел, как из
+                            старых моделей самолетов
+                            появлялись настоящие авиа шедевры.
+                        </p>
+                    </div>
+                </li>
+                <li class="profile">
+                    <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
+                    <div class="person">
+                        <p class="person__name">Дигангидзе Элина Даниловна</p>
+                        <p class="person__position">Диспетчер</p>
+                        <p class="person__bio">
+                            Ей присущ внимательный подход к
+                            расчетам, а отменная память удивляет
+                            даже самых опытных членов экипажа.
+                            За 22 года работы она стажировала
+                            более 100 диспетчеров для работы в
+                            крупнейших аэропортах страны. Знает
+                            в совершенстве 5 иностранных языков.
+                        </p>
+                    </div>
+                </li>
+                <li class="profile">
+                    <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
+                    <div class="person">
+                        <p class="person__name">Следь Елена Николаевна</p>
+                        <p class="person__position">Старший бортпроводник</p>
+                        <p class="person__bio">
+                            Вежливая улыбка, внимательность к
+                            деталям и большой опыт работы — это
+                            лишь малая часть достоинств Елены
+                            Николаевны. Старший бортпроводник
+                            задает тон всей поездке, поэтому
+                            клиенты, которые летят с ней,
+                            заряжаются отличным настроением и
+                            гармонией.
+                        </p>
+                    </div>
+                </li>
+                <li class="profile">
+                    <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
+                    <div class="person">
+                        <p class="person__name">Нестеренко Юрий Афанасьевич</p>
+                        <p class="person__position">Второй пилот</p>
+                        <p class="person__bio">
+                            Правая рука главного пилота, опытный
+                            и отважный помощник. О своей работе
+                            в шутку говорит так: "Наше дело
+                            правое, не мешать левому". Опыт
+                            работы составляет 18 лет,
+                            внимательно относится ко всем
+                            деталям и считает свою работу —
+                            делом жизни.
+                        </p>
+                    </div>
                 </li>
             </ul>
         </div>
+    </div>
+    <div class="footer">
         <div class="container">
-            <div class="main">
-                <ul class="breadcrumbs">
-                    <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
-                    <li class="breadcrumbs__item">/Экипаж</li>
-                </ul>
-                <div class="main__title">Экипаж</div>
-                <ul class="crew">
-                    <li class="profile">
-                        <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Белов Алексей Вадимович</p>
-                            <p class="person__position">Главный пилот</p>
-                            <p class="person__bio">
-                                Высокий профессионализм, честь
-                                и отвага - все это характеристики
-                                главного пилота Белова А.В. На его
-                                счету более 700 полетов. Награжден за
-                                мужество и отвагу указом президента.
-                            </p>
-                        </div>
+            <p class="footer__copyright">
+                Сделано с любовью и старанием
+                на курсе "Веб разработчик"
+                <a class=footer__loftschool href="http://loftschool.com">
+                    <strong>LoftSchool</strong></a>.
+                Автор работы: <strong>Данилов Антон</strong>.
+            </p>
+            <a href="http://ya.ru" class="">
+                <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
+            </a>
+            <div class="footer__social">
+                <p class="footer__title">Наши социальные сети</p>
+                <ul class="footer__links">
+                    <li class="footer__item">
+                        <a class="footer__link" href="http://ya.ru">
+                            <img class=footer__vk src="img/vk.png" alt="рис.ВК">
+                        </a>                       
                     </li>
-                    
-                    <li class="profile">
-                        <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Сухарина Инна Николаевна</p>
-                            <p class="person__position">Бортпроводник</p>
-                            <p class="person__bio">
-                                Благодаря деятельности этого
-                                человека, на борту самолета клиенты
-                                чувствуют себя, как дома. Инна
-                                Николаевна чутко относится ко всем
-                                требованиям клиентов, очень любит
-                                детей и всячески помогает сделать
-                                полет комфортным и приятным.
-                            </p>
-                        </div>
+                    <li class="footer__item">
+                        <a class="footer__link" href="http://ya.ru">
+                            <img class=footer__fb src="img/fb.png" alt="рис.ФБ">
+                        </a>                       
                     </li>
-                    <li class="profile">
-                        <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Лещ Борис Анатольевич</p>
-                            <p class="person__position">Авиатехник</p>
-                            <p class="person__bio">
-                                Человек с золотыми руками, инженер
-                                и конструктор от Бога! Борис
-                                Анатольевич работает уже более 50
-                                лет и на своем веку видел, как из
-                                старых моделей самолетов
-                                появлялись настоящие авиа шедевры.
-                            </p>
-                        </div>
+                    <li class="footer__item">
+                        <a class="footer__link" href="http://ya.ru">
+                            <img class=footer__google src="img/google.png" alt="рис.Г">
+                        </a>                       
                     </li>
-                    <li class="profile">
-                        <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Дигангидзе Элина Даниловна</p>
-                            <p class="person__position">Диспетчер</p>
-                            <p class="person__bio">
-                                Ей присущ внимательный подход к
-                                расчетам, а отменная память удивляет
-                                даже самых опытных членов экипажа.
-                                За 22 года работы она стажировала
-                                более 100 диспетчеров для работы в
-                                крупнейших аэропортах страны. Знает
-                                в совершенстве 5 иностранных языков.
-                            </p>
-                        </div>
+                    <li class="footer__item">
+                        <a class="footer__link" href="http://ya.ru">
+                            <img class=footer__twitter src="img/twitter.png" alt="рис.Тв">
+                        </a>                       
                     </li>
-                    <li class="profile">
-                        <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Следь Елена Николаевна</p>
-                            <p class="person__position">Старший бортпроводник</p>
-                            <p class="person__bio">
-                                Вежливая улыбка, внимательность к
-                                деталям и большой опыт работы — это
-                                лишь малая часть достоинств Елены
-                                Николаевны. Старший бортпроводник
-                                задает тон всей поездке, поэтому
-                                клиенты, которые летят с ней,
-                                заряжаются отличным настроением и
-                                гармонией.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="profile">
-                        <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Нестеренко Юрий Афанасьевич</p>
-                            <p class="person__position">Второй пилот</p>
-                            <p class="person__bio">
-                                Правая рука главного пилота, опытный
-                                и отважный помощник. О своей работе
-                                в шутку говорит так: "Наше дело
-                                правое, не мешать левому". Опыт
-                                работы составляет 18 лет,
-                                внимательно относится ко всем
-                                деталям и считает свою работу —
-                                делом жизни.
-                            </p>
-                        </div>
+                    <li class="footer__item">
+                        <a class="footer__link" href="http://ya.ru">
+                            <img class=footer__mail src="img/mail.png" alt="рис.М">
+                        </a>                       
                     </li>
                 </ul>
-            </div>
-        </div>
-        <div class="container">
-            <div class="footer">
-                <p class="footer__copyright">
-                    Сделано с любовью и старанием
-                    на курсе "Веб разработчик"
-                    <a class=footer__loftschool href="http://loftschool.com">
-                        <strong>LoftSchool</strong></a>.
-                    Автор работы: <strong>Данилов Антон</strong>.
-                </p>
-                <img src="img/logo_header.png" alt="logo" class="footer__logo">
-                <div class="footer__social">
-                    <p class="footer__title">Наши социальные сети</p>
-                    <ul class="footer__links">
-                        <li class="footer__item">
-                            <a class="footer__link" href="http://ya.ru">
-                                <img class=footer__vk src="img/vk.png" alt="рис.ВК">
-                            </a>                       
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="http://ya.ru">
-                                <img class=footer__fb src="img/fb.png" alt="рис.ФБ">
-                            </a>                       
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="http://ya.ru">
-                                <img class=footer__google src="img/google.png" alt="рис.Г">
-                            </a>                       
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="http://ya.ru">
-                                <img class=footer__twitter src="img/twitter.png" alt="рис.Тв">
-                            </a>                       
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="http://ya.ru">
-                                <img class=footer__mail src="img/mail.png" alt="рис.М">
-                            </a>                       
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
     </div>
