phone click, color

--- a/team.html
+++ b/team.html
@@ -15,12 +15,15 @@
                 <img src="img/logo_header.png" alt="logo" class=logo>
             </a>
             <div class=info>
-                <a href="tel:88000039210" class="phone">
-                    <div class="number">(800) 00-392-10</div> 
+                <a href="tel:88000039210" class="phone number">
+                    (800) 00-392-10 
                 </a>
                 <div class="popup">
                     <div class="schedule">График работы</div>
                     <div class="popup__block">
+                        
+                        <!-- <p class="workHours">пн-вс: 09:00-20:00</p>
+                        <p class="lunch">обед: 14:00-14:30</p> -->
                         <div class="workHours">пн-вс: 09:00-20:00</div>
                         <div class="lunch">обед: 14:00-14:30</div>
                     </div>
