--- a/team.html
+++ b/team.html
@@ -15,15 +15,15 @@
                 <img src="img/logo_header.png" alt="logo" class=logo>
             </a>
             <div class=info>
-                <a href="tel:88000039210" class="phone number">
+                <a href="tel:88000039210" class="phone">
                     (800) 00-392-10 
                 </a>
                 <div class="popup">
-                    <div class="schedule">График работы</div>
-                    <div class="popup__block">
-                        
-                        <!-- <p class="workHours">пн-вс: 09:00-20:00</p>
-                        <p class="lunch">обед: 14:00-14:30</p> -->
+                    <button class="popup__button">График работы</button>
+
+                    <!-- <div class="schedule">График работы</div> -->
+                    
+                    <div class="popupBox">
                         <div class="workHours">пн-вс: 09:00-20:00</div>
                         <div class="lunch">обед: 14:00-14:30</div>
                     </div>
@@ -165,7 +165,7 @@
                     <strong>LoftSchool</strong></a>.
                 Автор работы: <strong>Данилов Антон</strong>.
             </p>
-            <a href="http://ya.ru" class="">
+            <a href="http://ya.ru" class="homeLink">
                 <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
             </a>
             <div class="footer__social">
