--- a/team.html
+++ b/team.html
@@ -18,8 +18,8 @@
                 <a href="tel:88000039210" class="phone">
                     (800) 00-392-10 
                 </a>
-                <div class="popup">
-                    <button class="popup__button">График работы</button>
+                <div class="schedule">
+                    <button class="schedule__button">График работы</button>
 
                     <!-- <div class="schedule">График работы</div> -->
                     
