span instead div, some positioning

--- a/team.html
+++ b/team.html
@@ -18,13 +18,14 @@
                 <a href="tel:88000039210" class="phone">
                     (800) 00-392-10 
                 </a>
-                <div class="dropdown">
+                <span class="dropdown">
                     <button class="dropdown__button">График работы</button>
-                  <div class="dropdown__content">
+                    <!-- <span class="schedule">График работы</span> -->
+                  <span class="dropdown__content">
                         <div class="workHours">пн-вс: 09:00-20:00</div>
                         <div class="lunch">обед: 14:00-14:30</div>
-                  </div>
-                </div>
+                  </span>
+                </span>
                 
                 </body>
                 </html>
