--- a/team.html
+++ b/team.html
@@ -35,26 +35,26 @@
             </div>
         </div>
         <ul class="navigation">
-            <div class="container--navigation">
+            <div class="container">
                 <li class="navigation__mainLink">
                     <a href="http://ya.ru" class="navigation__link">
-                        <p class="navigation__name">Главная</p>
+                        <span class="navigation__name">Главная</span>
                     </a>
                 </li>
                 <li class="navigation__teamLink">
-                    <a href="team.html" class="navigation__link">
-                        <p class="navigation__name">Экипаж</p>
+                    <a href="ya.ru" class="navigation__link">
+                        <span class="navigation__name">Экипаж</span>
                     </a>
                 </li>
                 <li class="navigation__feedLink">
                     <a href="http://ya.ru" class="navigation__link">
-                        <p class="navigation__name">Отзывы</p>
+                        <span class="navigation__name">Отзывы</span>
                     </a>
                 </li>
             </div>
         </ul>
         <div class="main">
-            <div class="container--main">
+            <div class="container">
                 <ul class="breadcrumbs">
                     <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                     <li class="breadcrumbs__item">/Экипаж</li>
@@ -161,7 +161,7 @@
         </div>
     </div>
     <div class="footer">
-        <div class="container--footer">
+        <div class="container">
             <p class="footer__copyright">
                 Сделано с любовью и старанием
                 на курсе "Веб разработчик"
