--- a/team.html
+++ b/team.html
@@ -20,7 +20,6 @@
                     <a href="tel:88000039210" class="phone">
                     8 (800) 00-392-10 
                     </a>
-
                     <span class="dropdown">
                         <button class="dropdown__button">График работы</button>
                         <span class="dropdown__content">
@@ -35,7 +34,7 @@
             </div>
         </div>
         <ul class="navigation">
-            <div class="container">
+            <div class="container--navigation">
                 <li class="navigation__mainLink">
                     <a href="http://ya.ru" class="navigation__link">
                         <span class="navigation__name">Главная</span>
@@ -54,7 +53,7 @@
             </div>
         </ul>
         <div class="main">
-            <div class="container">
+            <div class="container--main">
                 <ul class="breadcrumbs">
                     <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                     <li class="breadcrumbs__item">/Экипаж</li>
@@ -169,7 +168,7 @@
                     <strong>LoftSchool</strong></a>.
                 Автор работы: <strong>Данилов Антон</strong>.
             </p>
-            <a href="http://ya.ru" class="homeLink">
+            <a href="http://ya.ru" class="footer__homeLink">
                 <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
             </a>
             <div class="footer__social">
