--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
             <div class="container--main">
                 <ul class="breadcrumbs">
                     <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
-                    <li class="breadcrumbs__item">/Экипаж</li>
+                    <li class="breadcrumbs__item">Экипаж</li>
                 </ul>
                 <div class="main__title">Экипаж</div>
                 <ul class="crew">
