main title positioning

--- a/team.html
+++ b/team.html
@@ -33,129 +33,146 @@
                 </div>
             </div>
         </div>
-        <ul class="navigation">
-            <div class="container--navigation">
-                <li class="navigation__mainLink">
-                    <a href="http://ya.ru" class="navigation__link">
-                        <span class="navigation__name">Главная</span>
-                    </a>
-                </li>
-                <li class="navigation__teamLink">
-                    <a href="ya.ru" class="navigation__link">
-                        <span class="navigation__name">Экипаж</span>
-                    </a>
-                </li>
-                <li class="navigation__feedLink">
-                    <a href="http://ya.ru" class="navigation__link">
-                        <span class="navigation__name">Отзывы</span>
-                    </a>
-                </li>
-            </div>
-        </ul>
-        <div class="main">
-            <div class="container--main">
-                <ul class="breadcrumbs">
-                    <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
-                    <li class="breadcrumbs__item">Экипаж</li>
-                </ul>
-                <div class="main__title">Экипаж</div>
-                <ul class="crew">
-                    <li class="profile">
-                        <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Белов Алексей Вадимович</p>
-                            <p class="person__position">Главный пилот</p>
-                            <p class="person__bio">
-                                Высокий профессионализм, честь
-                                и отвага - все это характеристики
-                                главного пилота Белова А.В. На его
-                                счету более 700 полетов. Награжден за
-                                мужество и отвагу указом президента.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="profile">
-                        <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Сухарина Инна Николаевна</p>
-                            <p class="person__position">Бортпроводник</p>
-                            <p class="person__bio">
-                                Благодаря деятельности этого
-                                человека, на борту самолета клиенты
-                                чувствуют себя, как дома. Инна
-                                Николаевна чутко относится ко всем
-                                требованиям клиентов, очень любит
-                                детей и всячески помогает сделать
-                                полет комфортным и приятным.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="profile">
-                        <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Лещ Борис Анатольевич</p>
-                            <p class="person__position">Авиатехник</p>
-                            <p class="person__bio">
-                                Человек с золотыми руками, инженер
-                                и конструктор от Бога! Борис
-                                Анатольевич работает уже более 50
-                                лет и на своем веку видел, как из
-                                старых моделей самолетов
-                                появлялись настоящие авиа шедевры.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="profile">
-                        <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Дигангидзе Элина Даниловна</p>
-                            <p class="person__position">Диспетчер</p>
-                            <p class="person__bio">
-                                Ей присущ внимательный подход к
-                                расчетам, а отменная память удивляет
-                                даже самых опытных членов экипажа.
-                                За 22 года работы она стажировала
-                                более 100 диспетчеров для работы в
-                                крупнейших аэропортах страны. Знает
-                                в совершенстве 5 иностранных языков.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="profile">
-                        <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Следь Елена Николаевна</p>
-                            <p class="person__position">Старший бортпроводник</p>
-                            <p class="person__bio">
-                                Вежливая улыбка, внимательность к
-                                деталям и большой опыт работы — это
-                                лишь малая часть достоинств Елены
-                                Николаевны. Старший бортпроводник
-                                задает тон всей поездке, поэтому
-                                клиенты, которые летят с ней,
-                                заряжаются отличным настроением и
-                                гармонией.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="profile">
-                        <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
-                        <div class="person">
-                            <p class="person__name">Нестеренко Юрий Афанасьевич</p>
-                            <p class="person__position">Второй пилот</p>
-                            <p class="person__bio">
-                                Правая рука главного пилота, опытный
-                                и отважный помощник. О своей работе
-                                в шутку говорит так: "Наше дело
-                                правое, не мешать левому". Опыт
-                                работы составляет 18 лет,
-                                внимательно относится ко всем
-                                деталям и считает свою работу —
-                                делом жизни.
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+        <!-- <ul class="navigation">
+            <li class="navigation__mainLink">
+                <a href="http://ya.ru" class="navigation__link">
+                    <span class="navigation__name">Главная</span>
+                </a>
+            </li>
+            <li class="navigation__teamLink">
+                <a href="ya.ru" class="navigation__link">
+                    <span class="navigation__name">Экипаж</span>
+                </a>
+            </li>
+            <li class="navigation__feedLink">
+                <a href="http://ya.ru" class="navigation__link">
+                    <span class="navigation__name">Отзывы</span>
+                </a>
+            </li>
+        </ul> -->
+        <div class="content">
+            <div class="container">
+                <ul class="navigation">
+                        <li class="navigation__mainLink">
+                            <a href="http://ya.ru" class="navigation__link">
+                                <span class="navigation__name">Главная</span>
+                            </a>
+                        </li>
+                        <li class="navigation__teamLink">
+                            <a href="ya.ru" class="navigation__link">
+                                <span class="navigation__name">Экипаж</span>
+                            </a>
+                        </li>
+                        <li class="navigation__feedLink">
+                            <a href="http://ya.ru" class="navigation__link">
+                                <span class="navigation__name">Отзывы</span>
+                            </a>
+                        </li>
+                    </ul>
+                <div class="main"></div>
+                    <ul class="breadcrumbs">
+                        <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
+                        <li class="breadcrumbs__item">Экипаж</li>
+                    </ul>
+                    <h1 class="main__title">Экипаж</h1>
+                    <ul class="crew">
+                        <li class="profile">
+                            <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
+                            <div class="person">
+                                <p class="person__name">Белов Алексей Вадимович</p>
+                                <p class="person__position">Главный пилот</p>
+                                <p class="person__bio">
+                                    Высокий профессионализм, честь
+                                    и отвага - все это характеристики
+                                    главного пилота Белова А.В. На его
+                                    счету более 700 полетов. Награжден за
+                                    мужество и отвагу указом президента.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="profile">
+                            <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
+                            <div class="person">
+                                <p class="person__name">Сухарина Инна Николаевна</p>
+                                <p class="person__position">Бортпроводник</p>
+                                <p class="person__bio">
+                                    Благодаря деятельности этого
+                                    человека, на борту самолета клиенты
+                                    чувствуют себя, как дома. Инна
+                                    Николаевна чутко относится ко всем
+                                    требованиям клиентов, очень любит
+                                    детей и всячески помогает сделать
+                                    полет комфортным и приятным.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="profile">
+                            <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
+                            <div class="person">
+                                <p class="person__name">Лещ Борис Анатольевич</p>
+                                <p class="person__position">Авиатехник</p>
+                                <p class="person__bio">
+                                    Человек с золотыми руками, инженер
+                                    и конструктор от Бога! Борис
+                                    Анатольевич работает уже более 50
+                                    лет и на своем веку видел, как из
+                                    старых моделей самолетов
+                                    появлялись настоящие авиа шедевры.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="profile">
+                            <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
+                            <div class="person">
+                                <p class="person__name">Дигангидзе Элина Даниловна</p>
+                                <p class="person__position">Диспетчер</p>
+                                <p class="person__bio">
+                                    Ей присущ внимательный подход к
+                                    расчетам, а отменная память удивляет
+                                    даже самых опытных членов экипажа.
+                                    За 22 года работы она стажировала
+                                    более 100 диспетчеров для работы в
+                                    крупнейших аэропортах страны. Знает
+                                    в совершенстве 5 иностранных языков.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="profile">
+                            <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
+                            <div class="person">
+                                <p class="person__name">Следь Елена Николаевна</p>
+                                <p class="person__position">Старший бортпроводник</p>
+                                <p class="person__bio">
+                                    Вежливая улыбка, внимательность к
+                                    деталям и большой опыт работы — это
+                                    лишь малая часть достоинств Елены
+                                    Николаевны. Старший бортпроводник
+                                    задает тон всей поездке, поэтому
+                                    клиенты, которые летят с ней,
+                                    заряжаются отличным настроением и
+                                    гармонией.
+                                </p>
+                            </div>
+                        </li>
+                        <li class="profile">
+                            <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
+                            <div class="person">
+                                <p class="person__name">Нестеренко Юрий Афанасьевич</p>
+                                <p class="person__position">Второй пилот</p>
+                                <p class="person__bio">
+                                    Правая рука главного пилота, опытный
+                                    и отважный помощник. О своей работе
+                                    в шутку говорит так: "Наше дело
+                                    правое, не мешать левому". Опыт
+                                    работы составляет 18 лет,
+                                    внимательно относится ко всем
+                                    деталям и считает свою работу —
+                                    делом жизни.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
