--- a/team.html
+++ b/team.html
@@ -79,23 +79,23 @@
                         <li class="profile">
                             <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
                             <div class="person">
-                                <p class="person__name">Белов Алексей Вадимович</p>
-                                <p class="person__position">Главный пилот</p>
-                                <p class="person__bio">
+                                <div class="person__name">Белов Алексей Вадимович</div>
+                                <div class="person__position">Главный пилот</div>
+                                <div class="person__bio">
                                     Высокий профессионализм, честь
                                     и отвага - все это характеристики
                                     главного пилота Белова А.В. На его
                                     счету более 700 полетов. Награжден за
                                     мужество и отвагу указом президента.
-                                </p>
+                                </div>
                             </div>
                         </li>
                         <li class="profile">
                             <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
                             <div class="person">
-                                <p class="person__name">Сухарина Инна Николаевна</p>
-                                <p class="person__position">Бортпроводник</p>
-                                <p class="person__bio">
+                                <div class="person__name">Сухарина Инна Николаевна</div>
+                                <div class="person__position">Бортпроводник</div>
+                                <div class="person__bio">
                                     Благодаря деятельности этого
                                     человека, на борту самолета клиенты
                                     чувствуют себя, как дома. Инна
@@ -103,30 +103,30 @@
                                     требованиям клиентов, очень любит
                                     детей и всячески помогает сделать
                                     полет комфортным и приятным.
-                                </p>
+                                </div>
                             </div>
                         </li>
                         <li class="profile">
                             <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
                             <div class="person">
-                                <p class="person__name">Лещ Борис Анатольевич</p>
-                                <p class="person__position">Авиатехник</p>
-                                <p class="person__bio">
+                                <div class="person__name">Лещ Борис Анатольевич</div>
+                                <div class="person__position">Авиатехник</div>
+                                <div class="person__bio">
                                     Человек с золотыми руками, инженер
                                     и конструктор от Бога! Борис
                                     Анатольевич работает уже более 50
                                     лет и на своем веку видел, как из
                                     старых моделей самолетов
                                     появлялись настоящие авиа шедевры.
-                                </p>
+                                </div>
                             </div>
                         </li>
                         <li class="profile">
                             <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
                             <div class="person">
-                                <p class="person__name">Дигангидзе Элина Даниловна</p>
-                                <p class="person__position">Диспетчер</p>
-                                <p class="person__bio">
+                                <div class="person__name">Дигангидзе Элина Даниловна</div>
+                                <div class="person__position">Диспетчер</div>
+                                <div class="person__bio">
                                     Ей присущ внимательный подход к
                                     расчетам, а отменная память удивляет
                                     даже самых опытных членов экипажа.
@@ -134,15 +134,15 @@
                                     более 100 диспетчеров для работы в
                                     крупнейших аэропортах страны. Знает
                                     в совершенстве 5 иностранных языков.
-                                </p>
+                                </div>
                             </div>
                         </li>
                         <li class="profile">
                             <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
                             <div class="person">
-                                <p class="person__name">Следь Елена Николаевна</p>
-                                <p class="person__position">Старший бортпроводник</p>
-                                <p class="person__bio">
+                                <div class="person__name">Следь Елена Николаевна</div>
+                                <div class="person__position">Старший бортпроводник</div>
+                                <div class="person__bio">
                                     Вежливая улыбка, внимательность к
                                     деталям и большой опыт работы — это
                                     лишь малая часть достоинств Елены
@@ -151,15 +151,15 @@
                                     клиенты, которые летят с ней,
                                     заряжаются отличным настроением и
                                     гармонией.
-                                </p>
+                                </div>
                             </div>
                         </li>
                         <li class="profile">
                             <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
                             <div class="person">
-                                <p class="person__name">Нестеренко Юрий Афанасьевич</p>
-                                <p class="person__position">Второй пилот</p>
-                                <p class="person__bio">
+                                <div class="person__name">Нестеренко Юрий Афанасьевич</div>
+                                <div class="person__position">Второй пилот</div>
+                                <div class="person__bio">
                                     Правая рука главного пилота, опытный
                                     и отважный помощник. О своей работе
                                     в шутку говорит так: "Наше дело
@@ -168,7 +168,7 @@
                                     внимательно относится ко всем
                                     деталям и считает свою работу —
                                     делом жизни.
-                                </p>
+                                </div>
                             </div>
                         </li>
                     </ul>
@@ -178,18 +178,18 @@
     </div>
     <div class="footer">
         <div class="container">
-            <p class="footer__copyright">
+            <div class="footer__copyright">
                 Сделано с любовью и старанием
                 на курсе "Веб разработчик"
                 <a class=footer__loftschool href="http://loftschool.com">
                     <strong>LoftSchool</strong></a>.
                 Автор работы: <strong>Данилов Антон</strong>.
-            </p>
+            </div>
             <a href="http://ya.ru" class="footer__homeLink">
                 <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
             </a>
             <div class="footer__social">
-                <p class="footer__title">Наши социальные сети</p>
+                <div class="footer__title">Наши социальные сети</div>
                 <ul class="footer__links">
                     <li class="footer__item">
                         <a class="footer__link" href="http://ya.ru">
